--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         </div>
     </div>
 
-    <section id="home" class="h-screen flex flex-col justify-center items-center text-center gap-6 mt-8 bg-[#FFFF00]">
+    <section id="home"
+        class="h-screen flex flex-col justify-center items-center text-center gap-6 mt-8 bg-[#FFFF00] mx-auto">
         <img src="./img/rubik.png" class="h-42 w-auto" alt="Logo" data-aos="zoom-in">
         <h1 class="text-7xl text-center font-extrabold" data-aos="fade-up">Rubik</h1>
         <p class="text-center md:text-xl max-w-xl text-gray-800 text-lg" data-aos="fade-up">Setiap sisi terdiri dari
