--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <ul class="flex space-x-4">
                     <!-- <li><a href="index.html" class="font-amuro text-xl hover:text-palette-sunset">Index</a></li> -->
                     <li><a href="#home"
-                            class="text-xl hover:bg-black text-black rounded-lg py-2 px-4 hover:text-white">Home</a>
+                            class="text-lg md:text-xl hover:bg-black text-black rounded-lg py-2 px-4 hover:text-white">Home</a>
                     </li>
                     <li><a href="#about"
-                            class="text-xl hover:bg-black text-black rounded-lg py-2 px-4 hover:text-white">Tentang</a>
+                            class="text-lg md:text-xl hover:bg-black text-black rounded-lg py-2 px-4 hover:text-white">Tentang</a>
                     </li>
                     <li><a href="#skills"
-                            class="text-xl hover:bg-black text-black rounded-lg py-2 px-4 hover:text-white">Kelebihan</a>
+                            class="text-lg md:text-xl hover:bg-black text-black rounded-lg py-2 px-4 hover:text-white">Kelebihan</a>
                     </li>
                 </ul>
             </nav>
@@ -38,7 +38,8 @@
         class="h-screen flex flex-col justify-center items-center text-center gap-6 mt-8 bg-[#FFFF00] mx-auto">
         <img src="./img/rubik.png" class="h-42 w-auto" alt="Logo" data-aos="zoom-in">
         <h1 class="text-7xl text-center font-extrabold" data-aos="fade-up">Rubik</h1>
-        <p class="text-center md:text-xl max-w-xl text-gray-800 text-lg" data-aos="fade-up">Setiap sisi terdiri dari
+        <p class="text-center text-md md:text-lg max-w-xl text-gray-800" data-aos="fade-up">Setiap sisi terdiri
+            dari
             kotak-kotak kecil yang bisa diputar, dan tujuan utamanya adalah <span
                 class="font-semibold">menyamakan</span> warna di setiap sisi kubus.</p>
     </section>
@@ -52,7 +53,7 @@
 
     <section id="about" class="min-h-screen bg-[#FFE600] flex justify-center items-center p-36 gap-12">
         <h1 class="text-7xl font-extrabold" data-aos="flip-right">Apa itu Rubik?</h1>
-        <p class="text-lg text-justify" data-aos="fade-left">adalah sebuah kubus
+        <p class="text-md md:text-lg text-justify" data-aos="fade-left">adalah sebuah kubus
             permainan yang setiap sisinya terdiri dari kotak-kotak
             berwarna. Tujuannya adalah memutar kubus hingga semua sisi memiliki warna yang sama.</p>
     </section>
