--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
             class="transition-all duration-300 ease-in-out delay-150 path-0"></path>
     </svg>
 
-    <section id="about" class="min-h-screen bg-[#FFE600] flex justify-center items-center p-36 gap-12">
-        <h1 class="text-7xl font-extrabold" data-aos="flip-right">Apa itu Rubik?</h1>
+    <section id="about"
+        class="min-h-screen bg-[#FFE600] flex-col-2 md:flex justify-center items-center p-6 gap-4 md:p-36 md:gap-12 ">
+        <h1 class="text-4xl md:text-7xl mt-24 md:mt-4 font-extrabold" data-aos="flip-right">Apa itu Rubik?</h1>
         <p class="text-md md:text-lg text-justify" data-aos="fade-left">adalah sebuah kubus
             permainan yang setiap sisinya terdiri dari kotak-kotak
             berwarna. Tujuannya adalah memutar kubus hingga semua sisi memiliki warna yang sama.</p>
