--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
     </div>
 
-    <section id="home"
-        class="h-screen flex flex-col justify-center items-center text-center gap-6 mt-8 bg-[#FFFF00] mx-auto">
+    <section id="home overflow-x-hidden"
+        class="min-h-screen flex flex-col justify-center items-center text-center p-6 gap-6 mt-8 bg-[#FFFF00] mx-auto">
         <img src="./img/rubik.png" class="h-42 w-auto" alt="Logo" data-aos="zoom-in">
-        <h1 class="text-7xl text-center font-extrabold" data-aos="fade-up">Rubik</h1>
+        <h1 class="text-6xl md:text-7xl text-center font-extrabold" data-aos="fade-up">Rubik</h1>
         <p class="text-center text-md md:text-lg max-w-xl text-gray-800 p-4" data-aos="fade-up">Setiap sisi
             terdiri
             dari
