--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./img/iconn.png">
 </head>
 
-<body class="bg-[#FFFF00]">
+<body class="bg-[#FFFF00] overflow-x-hidden">
     <!-- Navbar tcuy -->
     <div id="navbar" class="w-full fixed top-0 left-0 bg-transparent text-white z-20 backdrop-blur shadow-lg">
         <div class="flex justify-between items-center px-6 py-4 bg-transparent">
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <section id="home overflow-x-hidden"
+    <section id="home"
         class="min-h-screen flex flex-col justify-center items-center text-center p-6 gap-6 mt-8 bg-[#FFFF00] mx-auto">
         <img src="./img/rubik.png" class="h-42 w-auto" alt="Logo" data-aos="zoom-in">
         <h1 class="text-6xl md:text-7xl text-center font-extrabold" data-aos="fade-up">Rubik</h1>
