--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="./img/icon.png" alt="Icon" class="h-12 w-auto">
             </a>
             <nav>
-                <ul class="flex space-x-4">
+                <ul class="flex space-x-2 md:space-x-4">
                     <!-- <li><a href="index.html" class="font-amuro text-xl hover:text-palette-sunset">Index</a></li> -->
                     <li><a href="#home"
                             class="text-lg md:text-xl hover:bg-black text-black rounded-lg py-2 px-4 hover:text-white">Home</a>
